--- a/02-examples.tex
+++ b/02-examples.tex
@@ -126,7 +126,7 @@
   \end{minipage}}
   
   \begin{itemize}
-    \item $\Cov(\mu,\psi) = 0$ by design.
+    \item $\Cov(\mu,\psi) = 0$ by design in VI solutions.
     \item For this simple example, it is possible to decouple and solve explicitly.
     \item VI solutions leads to unbiased MLE if $\kappa_0 = \mu_0 = a_0 = b_0 = 0$.
   \end{itemize}
