--- a/03-properties.tex
+++ b/03-properties.tex
@@ -1,7 +1,7 @@
 \subsection{Exponential families}
 
 \begin{frame}{Exponential families}
-  \begin{itemize}
+  \begin{itemize}[<+->]
     \item For the mean-field variational method, suppose that each complete conditional is in the exponential family:
     \[
       p(\bz^{(j)}|\bz_{-j},\by) = h(\bz^{(j)})\exp \big(\eta_j(\bz_{-j},\by)\cdot \bz^{(j)} - A(\eta_j) \big).
@@ -14,12 +14,21 @@
     \end{align*}
     is also in the same exponential family.
     \item C.f. Gibbs conditional densities.
-    \item \textbf{ISSUE}: What if not in exponential family? Try importance sampling or Metropolis sampling.
+    \item \textbf{ISSUE}: What if not in exponential family?  Importance sampling or Metropolis sampling.
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Non-convexity of ELBO}
-  Means that it converges to a local optima rather than the global optima. Show multiple restarts yield different ELBO.
+  \vspace{-4pt}
+  \begin{figure}
+    \only<1|handout:0>{\includegraphics[scale=0.75]{figure/elbo_local_1}}
+    \only<2>{\includegraphics[scale=0.75]{figure/elbo_local_2}}
+  \end{figure}
+  \vspace{-8pt}
+  \begin{itemize}
+    \item CAVI only guarantees converges to a local optimum.
+    \item Multiple local optima may exist.
+  \end{itemize}
 \end{frame}
 
 \subsection{Zero-forcing vs Zero-avoiding}
@@ -45,10 +54,10 @@
   \vspace{-17pt}
   \begin{figure}[t]
   \centering\hspace{-20pt}
-  \only<1>{\includegraphics[scale=0.65]{figure/zero_force_1}}
-  \only<2>{\includegraphics[scale=0.65]{figure/zero_force_2}}
-  \only<3>{\includegraphics[scale=0.65]{figure/zero_force_3}}
-  \only<4>{\includegraphics[scale=0.65]{figure/zero_force_4}}      
+  \only<1|handout:0>{\includegraphics[scale=0.65]{figure/zero_force_1}}
+  \only<2|handout:1>{\includegraphics[scale=0.65]{figure/zero_force_2}}
+  \only<3|handout:2>{\includegraphics[scale=0.65]{figure/zero_force_3}}
+  \only<4|handout:3>{\includegraphics[scale=0.65]{figure/zero_force_4}}      
 \end{figure}
 
 \end{frame}
@@ -59,7 +68,7 @@
   \vspace{-11pt}
   \begin{figure}[t]
     \centering\hspace{-16pt}
-    \only<1>{\includegraphics[scale=0.7]{figure/distorted_mean_1}}
+    \only<1|handout:0>{\includegraphics[scale=0.7]{figure/distorted_mean_1}}
     \only<2->{\includegraphics[scale=0.7]{figure/distorted_mean_2}}
   \end{figure}
   \vspace{-10pt}
@@ -76,7 +85,7 @@
 
 \begin{frame}{Quality of approximation}
 %  \blfootnote{\fullcite{gunawardana2005convergence}}
-  \begin{itemize}
+  \begin{itemize}[<+->]
     \item Variational inference converges to a different optimum than ML, except for certain models (\cite{gunawardana2005convergence}).
     \item But not much can be said about the quality of approximation.
     \item Statistical properties not well understood---what is its statistical profile relative to the exact posterior?
@@ -84,7 +93,8 @@
   \end{itemize}
   \vspace{10pt}
   \centering
-  \hspace{-15pt}
+  \onslide<4->{
+  \hspace{-13pt}
   \begin{tikzpicture}[xscale=1.4]
   	\draw [<->,thick] (0,0) -- (6,0);
   	\node[left,text width=2cm,align=right] at (0,0) {\color{gray}\small Fast and inaccurate};
@@ -96,13 +106,16 @@
   	\draw[thick] (1.3,0) -- (1.3, -1.8);
   	\node[align=center,below] at (1.3,-1.8) {Laplace};  	  
   	\draw[thick] (2.5,0) -- (2.5, -1);	
-  	\node[align=center,below] at (3.2,-1) {Expectation propagation};  	    
+  	\node[align=center,below] at (3.2,-1) {Expectation propagation};
   \end{tikzpicture}
+  }
 \end{frame}
+
+\subsection{Advanced topics}
 
 \begin{frame}{Advanced topics}
   \begin{itemize}
-    \item Local variational bounds 
+    \item<1-> Local variational bounds 
     \begin{itemize}
       \item Not using the mean-field assumption.
       \item Instead, find a bound for the marginalising integral $\cI$.
@@ -111,13 +124,13 @@
         \cI = \int \expit(x^\top\beta) p(\beta) \d\beta \geq \int f(x^\top\beta,\xi) p(\beta) \d\beta.
       \]
     \end{itemize}
-    \item Stochastic variational inference
+    \item<2-> Stochastic variational inference
     \begin{itemize}
       \item VI on its own doesn't offer much computational advantages.
       \item Use ideas from stochastic optimisation---gradient based improvement of ELBO from subsamples of the data.
       \item Scales to massive data.
     \end{itemize}
-    \item Black box variational inference
+    \item<3-> Black box variational inference
     \begin{itemize}
       \item Beyond exponential families and model-specific derivations.
     \end{itemize}
