--- a/haziq_beamer.sty
+++ b/haziq_beamer.sty
@@ -251,6 +251,7 @@
     \begin{center}
     \Huge Thank you!
     \end{center}
+    \blfootnote{Slides and source code are made available at: {\color{fu-red!70}\url{http://socialstats.haziqj.ml}}}
     \end{frame}
   }
 }
