--- a/soc-stat-meet-bgtvi.tex
+++ b/soc-stat-meet-bgtvi.tex
@@ -40,18 +40,18 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-\input{01-introduction}
+%\input{01-introduction}
 
 \section[Examples]{Examples}
 \transition
-\input{02-examples}
+%\input{02-examples}
 
 \section{Discussion}
 \transition
 \input{03-properties.tex}
 
 \section*{End}
-%\thankyou
+\thankyou
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% REFERENCES %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -67,7 +67,7 @@
 \beginbackup
 \section{Additional material}
 \transitionsubsec
-\input{06-additional-material}
+%\input{06-additional-material}
 \backupend
 
 \end{document}
