--- a/02a-energy.tex
+++ b/02a-energy.tex
@@ -22,7 +22,7 @@
 \begin{frame}
   \centering
   \hspace{-0.7cm}
-  \only<1>{\begin{minipage}{.49\textwidth}
+  \only<1|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95]
     
@@ -56,7 +56,7 @@
       
     \end{tikzpicture}
   \end{minipage}}
-  \only<2>{\begin{minipage}{.49\textwidth}
+  \only<2|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95]
     
@@ -146,7 +146,7 @@
 \begin{frame}
   \centering
   \hspace{-0.7cm}
-  \only<1>{\begin{minipage}{.49\textwidth}
+  \only<1|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95,opacity=0.3]
     
@@ -180,7 +180,7 @@
       
     \end{tikzpicture}
   \end{minipage}}
-  \only<2>{\begin{minipage}{.49\textwidth}
+  \only<2|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95,opacity=0.3]
     
@@ -222,7 +222,7 @@
       
     \end{tikzpicture}
   \end{minipage}}
-  \only<3>{\begin{minipage}{.49\textwidth}
+  \only<3|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95,opacity=0.3]
     
@@ -262,7 +262,7 @@
       
     \end{tikzpicture}
   \end{minipage}}
-  \only<4>{\begin{minipage}{.49\textwidth}
+  \only<4|handout:0>{\begin{minipage}{.49\textwidth}
     % EM Algorithm
     \begin{tikzpicture}[scale=0.95,opacity=0.3]
     
