--- a/02-examples.tex
+++ b/02-examples.tex
@@ -4,7 +4,7 @@
 \begin{frame}[label=varex]{Estimation of a 1-dim Gaussian mean and variance}
   \vspace{-5pt}
   \begin{itemize}
-    \item<1-3> \textbf{GOAL}: Bayesian inference of mean $\mu$ and variance $\psi^{-1}$.
+    \item<1-3> \textbf{GOAL}: Bayesian inference of mean $\mu$ and variance $\psi^{-1}$
     \begin{center}
       {\def\arraystretch{1.2}
       \begin{tabular}{c c l}
