--- a/02a-mixture.tex
+++ b/02a-mixture.tex
@@ -1,4 +1,4 @@
-\subsection{Gaussian mixture model}
+\subsection{Gaussian mixtures}
 
 \begin{frame}{Gaussian mixture model (Old Faithful data set)}
   \vspace{-15pt}
@@ -70,7 +70,7 @@
     \item Assume the mean-field posterior density
     \begin{align*}
       q(\bz,\bpi,\bmu,\bPsi) &= q(\bz)q(\bpi,\bmu,\bPsi) \\
-      &= q(\bz)q(\bpi)q(\bmu|\bPsi)q(\bPsi)
+      &= q(\bz)q(\bpi)q(\bmu|\bPsi)q(\bPsi).
     \end{align*}
   \end{itemize}
   
