--- a/06-additional-material.tex
+++ b/06-additional-material.tex
@@ -1,6 +1,6 @@
 \subsection{The variational principle}
 
-\begin{frame}{The variational principle}
+\begin{frame}[label=variationalprinc]{The variational principle}
   \vspace{-10pt}
   \begin{itemize}[<+->]
     \item Name derived from calculus of variations which deals with maximising or minimising functionals.
@@ -22,6 +22,10 @@
   e.g. $\cH$ is the entropy $\cH = - \int p(x)\log p(x) \d x$, and $\tilde p$ is the entropy maximising distribution.
   \end{itemize}
   \vspace{5pt}
+  
+  \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
+    \hyperlink{idea}{\beamerbutton{back}}      
+  \end{textblock*}
 \end{frame}
 
 \subsection{Laplace's method}
@@ -42,7 +46,7 @@
   \end{itemize}
   
   \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
-    \hyperlink{estimation}{\beamerbutton{back}}      
+    \hyperlink{quality}{\beamerbutton{back}}      
   \end{textblock*}
 \end{frame}
 
@@ -75,7 +79,7 @@
   } 
   
   \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
-    \hyperlink{summary}{\beamerbutton{back}}      
+    \hyperlink{quality}{\beamerbutton{back}}      
   \end{textblock*}
 \end{frame}
 
@@ -86,6 +90,6 @@
   \end{center}
 
   \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
-    \hyperlink{summary}{\beamerbutton{back}}      
+    \hyperlink{quality}{\beamerbutton{back}}      
   \end{textblock*}  
 \end{frame}
