--- a/soc-stat-meet-bgtvi.tex
+++ b/soc-stat-meet-bgtvi.tex
@@ -1,5 +1,5 @@
-\documentclass[]{beamer}
-%\documentclass[xcolor={dvipsnames}, handout]{beamer}  % for printing
+%\documentclass[]{beamer}
+\documentclass[xcolor={dvipsnames}, handout]{beamer}  % for printing
 \usepackage{haziq_beamer}
 \usepackage{knitr}
 \graphicspath{{figure/}{R/figure/}}
@@ -10,7 +10,7 @@
 %%% TITLE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title[Variational inference]{A beginner's guide to variational inference}
+\title[Variational inference]{A Beginner's Guide to Variational Inference}
 \author[Haziq Jamil]{
   \large{Haziq Jamil}\\ 
   %\footnotesize{Supervisors: Dr. Wicher Bergsma \& Prof. Irini Moustaki}
@@ -40,11 +40,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-%\input{01-introduction}
+\input{01-introduction}
 
 \section[Examples]{Examples}
 \transition
-%\input{02-examples}
+\input{02-examples}
 
 \section{Discussion}
 \transition
@@ -67,7 +67,7 @@
 \beginbackup
 \section{Additional material}
 \transitionsubsec
-%\input{06-additional-material}
+\input{06-additional-material}
 \backupend
 
 \end{document}
