--- a/R/README.Rmd
+++ b/R/README.Rmd
@@ -19,8 +19,8 @@ options(prompt = "R> ")
 Estimation of complex models that consists of various latent variables and parameters, in addition to the data that is observed, might involve overcoming an intractable integral.
 For instance, obtaining the likelihood of such models require marginalising over the latent variables, and this may prove to be difficult computationally---either due to model design or dimensionality.
 Variational inference, or variational Bayes as it is also known as, offers an  efficient alternative to Markov chain Monte Carlo methods, the Laplace approximation, and quadrature methods.
-Rooted in Bayesian inference and popularised in machine learning, the main idea is to overcome such difficulties by working with "easy" density functions in lieu of the true posterior distribution.
-These approximating density functions are chosen as to minimise the (reverse) Kullback-Leilber divergence between it and the truth.
+Rooted in Bayesian inference and popularised in machine learning, the main idea is to overcome the difficulties faced by working with "easy" density functions in lieu of the true posterior distribution.
+The approximating density function is chosen so as to minimise the (reverse) Kullback-Leilber divergence between them.
 The main topics that will be discussed are the mean-field variational approximation, the coordinate ascent algorithm, and its properties, with examples following.
 The hope is that the audience will gain a basic understanding of the method to possibly spur on further research and applications in their respective work.
 
