--- a/R/README.Rmd
+++ b/R/README.Rmd
@@ -24,12 +24,12 @@ The approximating density function is chosen so as to minimise the (reverse) Kul
 The main topics that will be discussed are the mean-field variational approximation, the coordinate ascent algorithm, and its properties, with examples following.
 The hope is that the audience will gain a basic understanding of the method to possibly spur on further research and applications in their respective work.
 
-*Keywords*: variational, Bayes, inference, expectation, maximisation, EM, propagation, EP, algorithm, coordinate, ascent, Gaussian, mixture, approximation, intractable, Kullback-Leibler, Markov, chain, Monte, Carlo, MCMC
+Keywords: `variational`, `Bayes`, `inference`, `expectation`, `maximisation`, `EM`, `propagation`, `EP`, `algorithm`, `coordinate`, `ascent`, `Gaussian`, `mixture`, `approximation`, `intractable`, `Kullback-Leibler`, `Markov`, `chain`, `Monte`, `Carlo`, `MCMC`
 
-## Links
+<!-- ## Links -->
 
-- Presentation slides - [PDF](http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf)
-- Source code - [GitHub](https://github.com/haziqj/soc-stat-meet-bgtvi)
+<!-- - Presentation slides - [PDF](http://socialstats.haziqj.ml/soc-stat-meet-bgtvi-handout.pdf) -->
+<!-- - Source code - [GitHub](https://github.com/haziqj/soc-stat-meet-bgtvi) -->
 
 ## Supplementary material
 
