--- a/03-properties.tex
+++ b/03-properties.tex
@@ -130,7 +130,7 @@
     \end{itemize}
     \item<2-> Stochastic variational inference
     \begin{itemize}
-      \item VI on its own doesn't offer much computational advantages.
+%      \item VI on its own doesn't offer much computational advantages.
       \item Use ideas from stochastic optimisation---gradient based improvement of ELBO from subsamples of the data.
       \item Scales to massive data.
     \end{itemize}
