--- a/soc-stat-meet-bgtvi.tex
+++ b/soc-stat-meet-bgtvi.tex
@@ -1,5 +1,5 @@
-%\documentclass[]{beamer}
-\documentclass[xcolor={dvipsnames}, handout]{beamer}  % for printing
+\documentclass[]{beamer}
+%\documentclass[xcolor={dvipsnames}, handout]{beamer}  % for printing
 \usepackage{haziq_beamer}
 \usepackage{knitr}
 \graphicspath{{figure/}{R/figure/}}
