--- a/02a-mixture.tex
+++ b/02a-mixture.tex
@@ -65,7 +65,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Variational inference for GMM}
+\begin{frame}[label=vigmm]{Variational inference for GMM}
   \begin{itemize}
     \item Assume the mean-field posterior density
     \begin{align*}
@@ -95,9 +95,9 @@
     }
   \end{center}
   
-%  \begin{textblock*}{3cm}(.89\textwidth,1\textheight)%
-%    \hyperlink{varex}{\beamerbutton{example}}      
-%  \end{textblock*}
+  \begin{textblock*}{3cm}(.9\textwidth,0.498\textheight)%
+    \hyperlink{vigmmsoln}{\beamerbutton{details}}      
+  \end{textblock*}
 \end{frame}
 
 \begin{frame}{Variational inference for GMM (cont.)}
