--- a/06-additional-material.tex
+++ b/06-additional-material.tex
@@ -93,3 +93,53 @@
     \hyperlink{quality}{\beamerbutton{back}}      
   \end{textblock*}  
 \end{frame}
+
+\subsection{Solutions to Gaussian mixture}
+
+\begin{frame}[label=vigmmsoln]{Variational solutions to Gaussian mixture model}
+  \underline{Variational M-step}
+  \begin{align*}
+  \begin{gathered}
+    \tilde q(\bz) = \prod_{i=1}^n\prod_{k=1}^K r_{ik}^{z_{ik}}, \hspace{0.5cm} r_{ik} = \rho_{ik} / \sum_{k=1}^K \rho_{ik} \\
+    \log \rho_{ik} = \E[\log\pi_k] + \half \E\big[\log|\bPsi_k|\big] - \half[d]\log 2\pi \\
+    - \half \E \left[(\bx_i - \bmu_k)^\top \bPsi_k (\bx_i - \bmu_k)  \right]
+  \end{gathered} 
+  \end{align*}
+  \underline{Variational E-step}
+  \begin{align*}
+  \begin{gathered}
+    \tilde q(\pi_1,\dots,\pi_K) = \Dir_K(\bpi | \tilde\balpha),  \hspace{0.5cm}  \tilde\alpha_k = \alpha_{0k} + \textstyle\sum_{i=1}^n r_{ik} \\
+    \tilde q(\bmu,\bPsi) = \prod_{k=1}^K \N_d\big(\bmu_k|\tilde\bmm_k, (\tilde\kappa_{k}\bPsi_k)^{-1}\big)\Wis_d(\bPsi_k|\tilde\bW_k,\tilde\nu_k)
+  \end{gathered} 
+  \end{align*}
+  
+  \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
+    \hyperlink{vigmm}{\beamerbutton{back}}      
+  \end{textblock*} 
+\end{frame}
+
+\begin{frame}{Variational solutions to Gaussian mixture model (cont.)}
+  \vspace{-20pt}
+  \begin{align*}
+  \begin{gathered}
+    \tilde\kappa_k = \kappa_0 + \textstyle\sum_{i=1}^n r_{ik} \\
+    \tilde\bmm_k = (\kappa_0\bmm_0 + \textstyle\sum_{i=1}^n r_{ik}\bx_i) / \tilde\kappa_k \\
+    \bW_k^{-1} = \bW_0^{-1} + \sum_{i=1}^n r_{ik}(\bx_i - \bar\bx_k)(\bx_i - \bar\bx_k)^\top \\
+    \bar\bx_k = \sum_{i=1}^n r_{ik}\bx_i \Big/ \sum_{i=1}^n r_{ik} \\
+    \nu_k = \nu_0 + \textstyle\sum_{i=1}^n r_{ik}
+  \end{gathered} 
+  \end{align*}
+  \underline{Also useful}
+  \begin{align*}
+  \begin{gathered}
+    \E \left[(\bx_i - \bmu_k)^\top \bPsi_k (\bx_i - \bmu_k)  \right] = 
+    d/\tilde\kappa_k + \nu_k(\bx_i - \tilde\bmm_k)^\top \tilde\bW_k (\bx_i - \tilde\bmm_k) \\
+    \E[\log\pi_k] = \textstyle\sum_{i=1}^d \psi\left(\frac{\nu_k + 1 - i}{2} \right) + d \log 2 + \log |\tilde\bW_k |  \\
+    \E\big[\log|\bPsi_k|\big] = \psi(\tilde\alpha_k) - \psi\big(\textstyle\sum_{k=1}^K\tilde\alpha_k\big)
+  \end{gathered} 
+  \end{align*}  
+  
+  \begin{textblock*}{3cm}(.982\textwidth,1.04\textheight)%
+    \hyperlink{vigmm}{\beamerbutton{back}}      
+  \end{textblock*} 
+\end{frame}
