--- a/R/README.Rmd
+++ b/R/README.Rmd
@@ -5,23 +5,17 @@ output: github_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, prompt = TRUE)
 options(prompt = "R> ")
-
-# Load external .R file
-# knitr::read_chunk("01-prelim.R")
-# knitr::read_chunk("05-iris.R")
-# knitr::read_chunk("07-cardiac.R")
-# knitr::read_chunk("08-smoking.R")
 ```
 
 ## Abstract
 
 <!-- This talk aims to introduce the concept of variational techniques for estimating statistical models with latent variables.  -->
-Estimation of complex models that consists of various latent variables and parameters, in addition to the data that is observed, might involve overcoming an intractable integral.
-For instance, obtaining the likelihood of such models require marginalising over the latent variables, and this may prove to be difficult computationally---either due to model design or dimensionality.
-Variational inference, or variational Bayes as it is also known, offers an  efficient alternative to Markov chain Monte Carlo methods, the Laplace approximation, and quadrature methods.
+Estimation of complex models that consists of latent variables and various parameters, in addition to the data that is observed, might involve overcoming an intractable integral.
+For instance, calculating the likelihood of such models require marginalising over the latent variables, and this may prove to be difficult computationally---either due to model design or dimensionality.
+Variational inference, or variational Bayes as it is also known, offers an efficient alternative to Markov chain Monte Carlo methods, the Laplace approximation, and quadrature methods.
 Rooted in Bayesian inference and popularised in machine learning, the main idea is to overcome the difficulties faced by working with "easy" density functions in lieu of the true posterior distribution.
 The approximating density function is chosen so as to minimise the (reverse) Kullback-Leilber divergence between them.
-The main topics that will be discussed are the mean-field variational approximation, the coordinate ascent algorithm, and its properties, with examples following.
+The topics that will be discussed are the mean-field variational approximation, the coordinate ascent algorithm, and its properties, with examples following.
 The hope is that the audience will gain a basic understanding of the method to possibly spur on further research and applications in their respective work.
 
 *Keywords*: `variational`, `Bayes`, `inference`, `expectation`, `maximisation`, `EM`, `propagation`, `EP`, `algorithm`, `coordinate`, `ascent`, `Gaussian`, `mixture`, `approximation`, `intractable`, `Kullback-Leibler`, `Markov`, `chain`, `Monte`, `Carlo`, `MCMC`
