Fixed some mistakes

--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -14,7 +14,7 @@
     \end{itemize}
 %    \item Possible ways: quadrature methods, Laplace approximation, MCMC
     \pause
-    \item Variational inference approximates the ``posterior'' $\cI$ by a tractably close distribution in the Kullback-Leibler sense.
+    \item Variational inference approximates the ``posterior'' $p(\bz|\by)$ by a tractably close distribution in the Kullback-Leibler sense.
     \item<4-> Advantages:
     \begin{itemize}
       \item Computationally fast
