--- a/02a-mixture.tex
+++ b/02a-mixture.tex
@@ -12,7 +12,8 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Gaussian mixture model}
+\begin{frame}{Gaussian mixture model}  
+  \vspace{-4.5mm}
   \onslide<2->{
   \begin{tikzpicture}[scale=1.1, transform shape]
     \tikzstyle{main}=[circle, minimum size = 10mm, thick, draw =black!80, node distance = 16mm]
@@ -26,20 +27,20 @@
     \only<3->{\node[main,draw=colblu] (mu) [above=of z,yshift=-0.7cm] {\color{colblu} $\bmu_k$};}
     \node[main] (Psi) [above=of x,yshift=-0.7cm] {$\bPsi_k$};  
     \only<3->{\node[main,draw=colgre] (Psi) [above=of x,yshift=-0.7cm] {\color{colgre} $\bPsi_k$};}
-    \path (pi) edge [connect] (z)
-          (z) edge [connect] (x)
+    \path (pi)  edge [connect] (z)
+          (z)   edge [connect] (x)
   		  (Psi) edge [connect] (mu) 
-   		  (mu) edge [connect] (x)
+   		  (mu)  edge [connect] (x)
    		  (Psi) edge [connect] (x);
     \node[rectangle, draw=black!100, fit= {(mu) ($(Psi.north east) + (0,0.5cm)$)}] {}; 
-    \node[rectangle, draw=none, fit= (mu) (Psi), label=above right:{$k=1,\dots,K$},yshift=-2mm,xshift=-12.75mm] {}; 
+    \node[rectangle, fit=(mu) (Psi), yshift=6.8mm, xshift=6.5mm] {\small$k=1,\dots,K$}; 
     \node[rectangle, draw=black!100, fit={(z) ($(x.south east) + (0,-0.5cm)$)}] {}; 
-    \node[rectangle, draw=none, fit={(z) (x)}, label=below right:{$i=1,\dots,n$},yshift=1.5mm,xshift=-11mm] {}; 
+    \node[rectangle, fit=(z) (x), yshift=-9.9mm, xshift=7.5mm] {\small $i=1,\dots,n$}; 
   \end{tikzpicture}
   }
-  
+
   \onslide<3->{  
-  \begin{textblock*}{0.47\textwidth}(0.55\textwidth,1.35cm)
+  \begin{textblock*}{0.47\textwidth}(0.55\textwidth,1.2cm)
     \begin{block}{}
     \vspace{-1.6em}
       \begin{align*}
@@ -55,7 +56,7 @@
   \end{textblock*}
   }
 
-  \vspace{2mm}
+  \vspace{-2.5mm}
   \begin{itemize}
     \item Introduce $\bz_i = (z_{i1},\dots,z_{iK})$, a $1$-of-$K$ binary vector, where each $z_{ik} \sim \Bern(\pi_k)$.
     \item Assuming $\bz = \{\bz_1,\dots,\bz_n \}$ are observed along with $\bx = \{\bx_1,\dots,\bx_n \}$,
